--- a/README
+++ b/README
@@ -16,7 +16,7 @@ I plan to have the following functionality for the 0.1 release.
 - Mouse (Done)
 - Dialog Box (In progress)
 - Event Handler (In progress)
-- Button 
+- Button (In progress)
 - Checkbox
 - Text Input
 - Text Area
