--- a/README
+++ b/README
@@ -16,7 +16,7 @@ I plan to have the following functionality for the 0.1 release. The status refle
 - Mouse (Done)
 - Dialog Box (In progress)
 - Event Handler (Done)
-- Button (In progress)
+- Button (Done)
 - Checkbox
 - Text Input
 - Text Area
