--- a/README
+++ b/README
@@ -1,10 +1,11 @@
-Gosui is a UI library for the Gosu Game Library (current version 0.0.3)
+Gosui is a UI library for the Gosu Game Library (current version 0.0.4)
 
 Currently Supports
   - Mouse
   - Dialog Boxes
   - Event Handler
   - Buttons
+  - Checkbox
 
 Requirements
   - Gosu (sudo gem install gosu)
@@ -18,7 +19,7 @@ I plan to have the following functionality for the 0.1 release. The status refle
 - Dialog Box (In progress)
 - Event Handler (Done)
 - Button (Done)
-- Checkbox
+- Checkbox (Done)
 - Text Input
 - Text Area
 - Vertical scroll bar
